--- a/AppChat/Cells/SenderCell.xib
+++ b/AppChat/Cells/SenderCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="f8n-aQ-cj6">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="f8n-aQ-cj6" customClass="SenderCell" customModule="AppChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="346" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2a1-4X-VtJ">
@@ -18,13 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bEB-jE-KxS">
-                        <rect key="frame" x="272" y="48" width="68" height="36.5"/>
+                        <rect key="frame" x="331" y="48" width="9" height="36.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ml9-Kg-9I1">
-                                <rect key="frame" x="8" y="8" width="52" height="20.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="TOP-2k-hM6"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="8" width="9" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -32,7 +29,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ml9-Kg-9I1" firstAttribute="width" secondItem="bEB-jE-KxS" secondAttribute="width" constant="-16" id="52v-vx-xum"/>
+                            <constraint firstItem="ml9-Kg-9I1" firstAttribute="width" secondItem="bEB-jE-KxS" secondAttribute="width" id="52v-vx-xum"/>
                             <constraint firstItem="ml9-Kg-9I1" firstAttribute="centerY" secondItem="bEB-jE-KxS" secondAttribute="centerY" id="5sw-qb-HA6"/>
                             <constraint firstItem="ml9-Kg-9I1" firstAttribute="height" secondItem="bEB-jE-KxS" secondAttribute="height" constant="-16" id="Hs5-Mn-oOS"/>
                             <constraint firstItem="ml9-Kg-9I1" firstAttribute="centerX" secondItem="bEB-jE-KxS" secondAttribute="centerX" id="MQo-Ma-FhT"/>
@@ -46,6 +43,10 @@
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="346" height="132"/>
+            <connections>
+                <outlet property="lblText" destination="ml9-Kg-9I1" id="zgQ-0C-wCy"/>
+                <outlet property="viewBg" destination="bEB-jE-KxS" id="wD3-Ne-dv2"/>
+            </connections>
             <point key="canvasLocation" x="78.260869565217391" y="117.1875"/>
         </collectionViewCell>
     </objects>
