--- a/AppChat/Cells/ReceiverCell.xib
+++ b/AppChat/Cells/ReceiverCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Chi-CG-1gS">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Chi-CG-1gS" customClass="ReceiverCell" customModule="AppChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="322" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Fhw-pu-NQM">
@@ -25,13 +25,10 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgg-mT-oAH">
-                        <rect key="frame" x="56" y="8" width="68" height="36.5"/>
+                        <rect key="frame" x="56" y="8" width="25" height="36.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bmP-ql-w1V">
-                                <rect key="frame" x="8" y="8" width="52" height="20.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="ZTW-k8-nNS"/>
-                                </constraints>
+                                <rect key="frame" x="8" y="8" width="9" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -42,13 +39,12 @@
                             <constraint firstItem="bmP-ql-w1V" firstAttribute="centerX" secondItem="Tgg-mT-oAH" secondAttribute="centerX" id="Diz-Te-rRw"/>
                             <constraint firstItem="bmP-ql-w1V" firstAttribute="height" secondItem="Tgg-mT-oAH" secondAttribute="height" constant="-16" id="bTp-GV-6de"/>
                             <constraint firstItem="bmP-ql-w1V" firstAttribute="width" secondItem="Tgg-mT-oAH" secondAttribute="width" constant="-16" id="drO-MX-cd0"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="eDZ-g0-zRb"/>
                             <constraint firstItem="bmP-ql-w1V" firstAttribute="centerY" secondItem="Tgg-mT-oAH" secondAttribute="centerY" id="sFI-HF-P0y"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tgg-mT-oAH" secondAttribute="trailing" id="86n-dx-R1i"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tgg-mT-oAH" secondAttribute="trailing" constant="8" id="86n-dx-R1i"/>
                     <constraint firstItem="ffn-hT-or2" firstAttribute="top" secondItem="Fhw-pu-NQM" secondAttribute="top" constant="8" id="dIq-ES-xuZ"/>
                     <constraint firstItem="Tgg-mT-oAH" firstAttribute="leading" secondItem="ffn-hT-or2" secondAttribute="trailing" constant="8" id="qle-B9-PBc"/>
                     <constraint firstItem="ffn-hT-or2" firstAttribute="leading" secondItem="Fhw-pu-NQM" secondAttribute="leading" constant="8" id="sAk-lT-oXu"/>
@@ -56,7 +52,12 @@
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="322" height="50"/>
-            <point key="canvasLocation" x="334.78260869565219" y="113.83928571428571"/>
+            <connections>
+                <outlet property="imgView" destination="ffn-hT-or2" id="NLs-Jq-Wlo"/>
+                <outlet property="lblText" destination="bmP-ql-w1V" id="3Ik-8e-dHM"/>
+                <outlet property="viewBg" destination="Tgg-mT-oAH" id="enW-Ku-dcJ"/>
+            </connections>
+            <point key="canvasLocation" x="242" y="-1"/>
         </collectionViewCell>
     </objects>
     <resources>
